PWA: add width 100% to entriesInner to fix overflow

--- a/pwa/style.css
+++ b/pwa/style.css
@@ -389,6 +389,7 @@
         }
         #entriesInner {
             min-height: 100%;
+            width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
